--- a/Public/page-styles.css
+++ b/Public/page-styles.css
@@ -743,9 +743,9 @@ body {
     position: relative;
 }
 
-.early-childhood { background-image: url('https://images.unsplash.com/photo-1503454537195-1dcabb73ffb9?w=400'); }
-.elementary { background-image: url('https://images.unsplash.com/photo-1581726690015-c9861fa5057f?w=400'); }
-.adolescent { background-image: url('https://images.unsplash.com/photo-1523050854058-8df90110c9f1?w=400'); }
+.early-childhood { background-image: url('../Images/Preschool_Snapshot.png'); }
+.elementary { background-image: url('../Images/Elementary_Snapshot.png'); }
+.adolescent { background-image: url('../Images/Adolecent_Snapshot.png'); }
 
 .card-overlay {
     position: absolute;
